--- a/about.html
+++ b/about.html
@@ -59,13 +59,13 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" alt="Photo of Yoga App" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yoga.png" alt="Photo of Yoga App" class=" product img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" alt="Photo of Weather App" class="img-fluid p-2 shadow rounded" />
+          <img src="images/weather.png" alt="Photo of Weather App" class="product img-fluid p-2 shadow rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" alt="Photo of Yogurt App" class="img-fluid p-2 shadow rounded" />
+          <img src="images/yogurt.png" alt="Photo of Yogurt App" class="product img-fluid p-2 shadow rounded" />
         </div>
       </div>
     </div>
